// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/PanelSpinner renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderColor": "rgba(32, 36, 45, 0.15)",
      "borderRadius": 300,
      "borderWidth": 1,
      "elevation": 10,
      "justifyContent": "center",
      "padding": 30,
      "shadowColor": "#20242D",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 18,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "center",
        "transform": [
          {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#2B78EE"
      height="48"
      width="48"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/PanelSpinner renders correctly canceled 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderColor": "rgba(32, 36, 45, 0.15)",
      "borderRadius": 300,
      "borderWidth": 1,
      "elevation": 10,
      "justifyContent": "center",
      "padding": 30,
      "shadowColor": "#20242D",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 18,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "center",
        "transform": [
          {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#2B78EE"
      height="48"
      width="48"
    />
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "aspectRatio": 1,
          "borderRadius": 36,
          "justifyContent": "center",
          "width": 72,
        },
        {
          "position": "absolute",
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#9BA1B0",
          "fontFamily": "Neotis",
          "fontSize": 36,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/PanelSpinner renders correctly done 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderColor": "rgba(32, 36, 45, 0.15)",
      "borderRadius": 300,
      "borderWidth": 1,
      "elevation": 10,
      "justifyContent": "center",
      "padding": 30,
      "shadowColor": "#20242D",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 18,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "aspectRatio": 1,
        "borderRadius": 36,
        "justifyContent": "center",
        "width": 72,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#2B78EE",
          "fontFamily": "Neotis",
          "fontSize": 72,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/PanelSpinner renders correctly error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderColor": "rgba(32, 36, 45, 0.15)",
      "borderRadius": 300,
      "borderWidth": 1,
      "elevation": 10,
      "justifyContent": "center",
      "padding": 30,
      "shadowColor": "#20242D",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 18,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "aspectRatio": 1,
          "borderRadius": 36,
          "justifyContent": "center",
          "width": 72,
        },
        {
          "backgroundColor": "#EEEFF1",
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#9BA1B0",
          "fontFamily": "Neotis",
          "fontSize": 48,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;
